# QGC-plugins

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  aerosentry.xml  build-debug.bat  build.bat  clean.bat  install.bat
.github/workflows/: ci.yml
ci/: lint.bat  test.bat
docs/: API_REFERENCE.md  BUILD_INSTRUCTIONS.md  EXAMPLES.md  PLUGIN_DEVELOPMENT_GUIDE.md  README.md
plugins/: CMakeLists.txt
plugins/dashboard/: CMakeLists.txt  DashboardPlugin.cpp  DashboardPlugin.h  dashboard_plugin.json
plugins/example/: CMakeLists.txt  my_example_plugin.cpp  my_example_plugin.h
plugins/radar/: CMakeLists.txt  radar_entity.cpp  radar_entity.h  radar_plugin.cpp  radar_plugin.h  radar_plugin.json  radar_widget.cpp  radar_widget.h
src/: CMakeLists.txt  device_plugin_interface.h  device_plugin_manager.cpp  device_plugin_manager.h  mavlink_handler.cpp  mavlink_handler.h  mavlink_message_parser.cpp  mavlink_message_parser.h  version_compatibility.cpp  version_compatibility.h
tests/: CMakeLists.txt  test_main.cpp  test_mavlink_handler.cpp  test_mavlink_handler.h  test_plugin_framework.cpp  test_plugin_framework.h  test_plugin_manager.cpp  test_plugin_manager.h
